baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
enum user.Status {HttpError, IndexError, AuthError, SomeOtherError}
function user.AlwaysThrowsStatus(n: int) -> user.Status  [expr] {
  {  } match (n) { 0 => throw "http_error", _ => throw 404 }
}
function user.CatchAllStatusVariants(n: int) -> string  [expr] {
  {  } ThrowsAllStatusVariants(n) catch (e) { Status.HttpError => "http!" } catch (e) { Status.IndexError => "index!" } catch (e) { Status.AuthError => "auth!" } catch (e) { Status.SomeOtherError => "other!" }
}
function user.CatchAlwaysThrows(n: int) -> string  [expr] {
  {  } WrapperAlwaysThrows(n) catch (e) { _: string => "http!" } catch (e2) { _: int => "index!" }
}
function user.CatchRecursiveThrow(n: int) -> string  [expr] {
  {  } RecB(n) catch (e) { _: string => "handled" }
}
function user.RecA(n: int) -> string  [expr] {
  {  } match (n) { 0 => throw "boom", _ => RecB(n) }
}
function user.RecB(n: int) -> string  [expr] {
  {  } RecA(n)
}
function user.ThrowsAllStatusVariants(n: int) -> user.Status  [expr] {
  {  } match (n) { 1 => throw Status.HttpError, 2 => throw Status.IndexError, 3 => throw Status.AuthError, _ => throw Status.SomeOtherError }
}
function user.UnreachableTailStillChecked() -> string  [expr] {
  {  } { throw "error"; let x = 123 } x.missing
}
function user.WrapperAlwaysThrows(n: int) -> user.Status  [expr] {
  {  } AlwaysThrowsStatus(n)
}
