baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 3922
---
=== MIR2 ===
fn user.RecA(n: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // n // param

    bb0: {
        switch copy _1 [0: bb5, otherwise: bb1];
    }

    bb1: {
        _0 = call const fn user.RecB(copy _1) -> [bb2];
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        return;
    }

    bb5: {
        throw const "boom";
    }
}

fn user.RecB(n: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // n // param

    bb0: {
        _0 = call const fn user.RecA(copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.AlwaysThrowsStatus(n: int) -> user.Status {
    // Locals:
    let _0: user.Status // _0 // return
    let _1: int // n // param

    bb0: {
        switch copy _1 [0: bb2, otherwise: bb1];
    }

    bb1: {
        throw const 404_i64;
    }

    bb2: {
        throw const "http_error";
    }
}

fn user.CatchRecursiveThrow(n: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // n // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.RecB(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "handled";
        goto -> bb5;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.UnreachableTailStillChecked() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        throw const "error";
    }
}

fn user.CatchAlwaysThrows(n: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // n // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.WrapperAlwaysThrows(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr(None) });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "index!";
        goto -> bb7;
    }

    bb5: {
        _0 = const "http!";
        goto -> bb7;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn user.ThrowsAllStatusVariants(n: int) -> user.Status {
    // Locals:
    let _0: user.Status // _0 // return
    let _1: int // n // param

    bb0: {
        switch copy _1 [1: bb4, 2: bb3, 3: bb2, otherwise: bb1];
    }

    bb1: {
        throw const user.Status.SomeOtherError;
    }

    bb2: {
        throw const user.Status.AuthError;
    }

    bb3: {
        throw const user.Status.IndexError;
    }

    bb4: {
        throw const user.Status.HttpError;
    }
}

fn user.WrapperAlwaysThrows(n: int) -> user.Status {
    // Locals:
    let _0: user.Status // _0 // return
    let _1: int // n // param

    bb0: {
        _0 = call const fn user.AlwaysThrowsStatus(copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.CatchAllStatusVariants(n: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // n // param
    let _2: unknown
    let _3: bool
    let _4: bool
    let _5: bool
    let _6: bool

    bb0: {
        _0 = call const fn user.ThrowsAllStatusVariants(copy _1) -> [bb10, unwind: bb1];
    }

    bb1: {
        _3 = copy _2 == const user.Status.HttpError;
        branch copy _3 -> [bb9, bb2];
    }

    bb2: {
        _4 = copy _2 == const user.Status.IndexError;
        branch copy _4 -> [bb8, bb3];
    }

    bb3: {
        _5 = copy _2 == const user.Status.AuthError;
        branch copy _5 -> [bb7, bb4];
    }

    bb4: {
        _6 = copy _2 == const user.Status.SomeOtherError;
        branch copy _6 -> [bb6, bb5];
    }

    bb5: {
        throw copy _2;
    }

    bb6: {
        _0 = const "other!";
        goto -> bb11;
    }

    bb7: {
        _0 = const "auth!";
        goto -> bb11;
    }

    bb8: {
        _0 = const "index!";
        goto -> bb11;
    }

    bb9: {
        _0 = const "http!";
        goto -> bb11;
    }

    bb10: {
        goto -> bb11;
    }

    bb11: {
        goto -> bb12;
    }

    bb12: {
        return;
    }
}
