baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.Status
function user.AlwaysThrowsStatus(n: int) -> user.Status throws int | string {
  { : never
    match (n : int) : never
      0 =>
        throw "http_error" : never
      _ =>
        throw 404 : never
  }
}
function user.WrapperAlwaysThrows(n: int) -> user.Status throws int | string {
  { : user.Status
    AlwaysThrowsStatus(n) : user.Status
  }
}
function user.CatchAlwaysThrows(n: int) -> string throws never {
  { : user.Status | "http!" | "index!"
    catch (WrapperAlwaysThrows(n) : user.Status) : unknown
      catch (e)
        _: string =>
          "http!" : "http!"
      catch (e2)
        _: int =>
          "index!" : "index!"
  }
  !! 622..644: type mismatch: expected string, got user.Status
}
function user.ThrowsAllStatusVariants(n: int) -> user.Status throws user.Status.AuthError | user.Status.HttpError | user.Status.IndexError | user.Status.SomeOtherError {
  { : never
    match (n : int) : never
      1 =>
        throw Status.HttpError : never
      2 =>
        throw Status.IndexError : never
      3 =>
        throw Status.AuthError : never
      _ =>
        throw Status.SomeOtherError : never
  }
}
function user.CatchAllStatusVariants(n: int) -> string throws never {
  { : user.Status | "http!" | "index!" | "auth!" | "other!"
    catch (ThrowsAllStatusVariants(n) : user.Status) : unknown
      catch (e)
        Status.HttpError =>
          "http!" : "http!"
      catch (e)
        Status.IndexError =>
          "index!" : "index!"
      catch (e)
        Status.AuthError =>
          "auth!" : "auth!"
      catch (e)
        Status.SomeOtherError =>
          "other!" : "other!"
  }
  !! 1115..1141: type mismatch: expected string, got user.Status
}
function user.RecA(n: int) -> string throws string {
  { : string
    match (n : int) : string
      0 =>
        throw "boom" : never
      _ =>
        RecB(n) : string
  }
}
function user.RecB(n: int) -> string throws string {
  { : string
    RecA(n) : string
  }
}
function user.CatchRecursiveThrow(n: int) -> string throws never {
  { : string | "handled"
    catch (RecB(n) : string) : unknown
      catch (e)
        _: string =>
          "handled" : "handled"
  }
}
function user.UnreachableTailStillChecked() -> string throws string {
  { : never
    { : never
      throw "error" : "error"
      let x = 123 : unknown
      x.missing : unknown
    }
  }
  ?? 1900..1922: unreachable code: 2 statement(s) after diverging statement
}
