baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== DIAGNOSTICS ===
  [type] Error: Type `int` has no field `missing`
    ╭─[ regressions.baml:77:21 ]
    │
 77 │ ╭─▶         let x = 123;
 78 │ ├─▶         x.missing
    │ │                       
    │ ╰─────────────────────── Type `int` has no field `missing`
    │     
    │     Note: Error code: E0007
────╯
