baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected string, got user.Status | "http!" | "index!"
    ╭─[ regressions.baml:25:1 ]
    │
 25 │ ╭─▶     WrapperAlwaysThrows(n) catch (e) {
    ┆ ┆   
 29 │ ├─▶     }
    │ │           
    │ ╰─────────── type mismatch: expected string, got user.Status | "http!" | "index!"
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected string, got user.Status | "http!" | "index!" | "auth!" | "other!"
    ╭─[ regressions.baml:43:1 ]
    │
 43 │ ╭─▶     ThrowsAllStatusVariants(n) catch (e) {
    ┆ ┆   
 51 │ ├─▶     }
    │ │           
    │ ╰─────────── type mismatch: expected string, got user.Status | "http!" | "index!" | "auth!" | "other!"
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unreachable code: 2 statement(s) after diverging statement
    ╭─[ regressions.baml:75:6 ]
    │
 75 │ ╭─▶     {
 76 │ ├─▶         throw "error"
    │ │                           
    │ ╰─────────────────────────── unreachable code: 2 statement(s) after diverging statement
    │     
    │     Note: Error code: E0001
────╯
