baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.AlwaysThrowsStatus(n: int) -> Status {
    load_var n
    copy 0
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L1

  L0:
    pop 1
    load_const 404
    throw

  L1:
    load_const "http_error"
    throw
}

function user.CatchAllStatusVariants(n: int) -> string {
    load_var n
    call user.ThrowsAllStatusVariants
    jump L5
    load_var e
    discriminant
    jump_table [L4, L3, L2, L1], default L0

  L0:
    load_var e
    throw

  L1: Status.SomeOtherError
    load_const "other!"
    jump L5

  L2: Status.AuthError
    load_const "auth!"
    jump L5

  L3: Status.IndexError
    load_const "index!"
    jump L5

  L4: Status.HttpError
    load_const "http!"

  L5:
    return
}

function user.CatchAlwaysThrows(n: int) -> string {
    load_var n
    call user.WrapperAlwaysThrows
    jump L4
    load_var e
    is_type string
    pop_jump_if_false L0
    jump L3

  L0:
    load_var e
    is_type int
    pop_jump_if_false L1
    jump L2

  L1:
    load_var e
    throw

  L2:
    load_const "index!"
    jump L4

  L3:
    load_const "http!"

  L4:
    return
}

function user.CatchRecursiveThrow(n: int) -> string {
    load_var n
    call user.RecB
    jump L2
    load_var e
    is_type string
    pop_jump_if_false L0
    jump L1

  L0:
    load_var e
    throw

  L1:
    load_const "handled"

  L2:
    return
}

function user.RecA(n: int) -> string {
    load_var n
    copy 0
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L1

  L0:
    pop 1
    load_var n
    call user.RecB
    return

  L1:
    load_const "boom"
    throw
}

function user.RecB(n: int) -> string {
    load_var n
    call user.RecA
    return
}

function user.ThrowsAllStatusVariants(n: int) -> Status {
    load_var n
    copy 0
    load_const 1
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L5

  L0:
    copy 0
    load_const 2
    cmp_op ==
    pop_jump_if_false L1
    pop 1
    jump L4

  L1:
    copy 0
    load_const 3
    cmp_op ==
    pop_jump_if_false L2
    pop 1
    jump L3

  L2:
    pop 1
    load_const user.Status.SomeOtherError
    alloc_variant user.Status
    throw

  L3:
    load_const user.Status.AuthError
    alloc_variant user.Status
    throw

  L4:
    load_const user.Status.IndexError
    alloc_variant user.Status
    throw

  L5:
    load_const user.Status.HttpError
    alloc_variant user.Status
    throw
}

function user.UnreachableTailStillChecked() -> string {
    load_const "error"
    throw
}

function user.WrapperAlwaysThrows(n: int) -> Status {
    load_var n
    call user.AlwaysThrowsStatus
    return
}
