baml_language/crates/baml_tests/snapshots/catch_throw_regressions/baml_tests__catch_throw_regressions__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.AlwaysThrowsStatus(n: int) -> null {
    load_var n
    copy 0
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L1

  L0:
    pop 1
    load_const 404
    throw

  L1:
    load_const "http_error"
    throw
}

function user.CatchAllStatusVariants(n: int) -> string {
    push_unwind L0, slot 2
    load_var n
    call user.ThrowsAllStatusVariants
    pop_unwind
    jump L9

  L0:
    load_var _2
    load_const user.Status.HttpError
    alloc_variant user.Status
    cmp_op ==
    pop_jump_if_false L1
    jump L8

  L1:
    load_var _2
    load_const user.Status.IndexError
    alloc_variant user.Status
    cmp_op ==
    pop_jump_if_false L2
    jump L7

  L2:
    load_var _2
    load_const user.Status.AuthError
    alloc_variant user.Status
    cmp_op ==
    pop_jump_if_false L3
    jump L6

  L3:
    load_var _2
    load_const user.Status.SomeOtherError
    alloc_variant user.Status
    cmp_op ==
    pop_jump_if_false L4
    jump L5

  L4:
    load_var _2
    throw

  L5:
    load_const "other!"
    jump L9

  L6:
    load_const "auth!"
    jump L9

  L7:
    load_const "index!"
    jump L9

  L8:
    load_const "http!"

  L9:
    return
}

function user.CatchAlwaysThrows(n: int) -> string {
    push_unwind L0, slot 2
    load_var n
    call user.WrapperAlwaysThrows
    pop_unwind
    jump L5

  L0:
    load_var _2
    type_tag
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L4

  L1:
    load_var _2
    type_tag
    load_const 0
    cmp_op ==
    pop_jump_if_false L2
    jump L3

  L2:
    load_var _2
    throw

  L3:
    load_const "index!"
    jump L5

  L4:
    load_const "http!"

  L5:
    return
}

function user.CatchRecursiveThrow(n: int) -> string {
    push_unwind L0, slot 2
    load_var n
    call user.RecB
    pop_unwind
    jump L3

  L0:
    load_var _2
    type_tag
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L2

  L1:
    load_var _2
    throw

  L2:
    load_const "handled"

  L3:
    return
}

function user.RecA(n: int) -> string {
    load_var n
    copy 0
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L1

  L0:
    pop 1
    load_var n
    call user.RecB
    return

  L1:
    load_const "boom"
    throw
}

function user.RecB(n: int) -> string {
    load_var n
    call user.RecA
    return
}

function user.ThrowsAllStatusVariants(n: int) -> null {
    load_var n
    copy 0
    load_const 1
    cmp_op ==
    pop_jump_if_false L0
    pop 1
    jump L5

  L0:
    copy 0
    load_const 2
    cmp_op ==
    pop_jump_if_false L1
    pop 1
    jump L4

  L1:
    copy 0
    load_const 3
    cmp_op ==
    pop_jump_if_false L2
    pop 1
    jump L3

  L2:
    pop 1
    load_const user.Status.SomeOtherError
    alloc_variant user.Status
    throw

  L3:
    load_const user.Status.AuthError
    alloc_variant user.Status
    throw

  L4:
    load_const user.Status.IndexError
    alloc_variant user.Status
    throw

  L5:
    load_const user.Status.HttpError
    alloc_variant user.Status
    throw
}

function user.UnreachableTailStillChecked() -> string {
    load_const "error"
    throw
}

function user.WrapperAlwaysThrows(n: int) -> null {
    load_var n
    call user.AlwaysThrowsStatus
    return
}
